# krui

./: .gitignore  Cargo.toml  LICENSE.md  README.md  data.json
src/: app.rs  button.rs  handler.rs  lib.rs  main.rs  markdown.rs  printer.rs  ui.rs
src/app/: printer.rs
src/ui/: console.rs  header.rs  main.rs  stateful_list.rs  toolhead.rs  webcam.rs
