[package]
name = "krui"
version = "0.1.0"
authors = ["Jonathan Foucher <jfoucher@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
tui = { package = "ratatui", version = "0.22.0" }
websocket = "0.26.5"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flume = { version = "0.10", default-features = false, features = ["spin", "select"] }
itertools = "*"