[package]
name = "krui"
version = "0.0.1"
authors = ["Jonathan Foucher <jfoucher@gmail.com>"]
description = "Klipper Remote User Interface. A TUI for the Moonraker API on Klipper enabled 3D printers."
license = "MIT"
edition = "2021"
repository = "https://github.com/jfoucher/krui"
keywords = ["3Dprinting", "klipper", "moonraker", "tui"]
exclude = [
    "img/*",
]

[dependencies]
crossterm = "0.27.0"
tui = { package = "ratatui", version = "0.23.0" }
websocket = "0.26.5"
rand = "0.8.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
flume = { version = "0.11", default-features = false, features = ["spin", "select"] }
itertools = "0.11"
log4rs = "1.2"
log = "0.4"
chrono = "0.4"
viuer = "0.6"
curl = { version = "0.4", features = ["http2"] }
